--- a/app/src/main/res/layout/spinner_item_trait_duplication.xml
+++ b/app/src/main/res/layout/spinner_item_trait_duplication.xml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/spinner_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/visible_trait_count"
+    <com.google.android.material.chip.Chip
+        android:id="@+id/visibleTraitCountChip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:paddingEnd="8dp"
-        android:text="Visible Trait Count" />
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:enabled="false"
+        android:duplicateParentState="true"
+        app:chipIcon="@drawable/ic_ruler"
+        app:chipIconSize="24dp"
+        app:ensureMinTouchTargetSize="false"
+        app:closeIconVisible="false"
+        app:chipBackgroundColor="?attr/defaultChipBackground"
+        android:text="0" />
 
     <TextView
+        android:paddingStart="8dp"
         android:id="@+id/field_alias"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textStyle="bold"
         android:text="Field Alias" />
 </LinearLayout>
