--- a/app/src/main/res/layout/trait_status.xml
+++ b/app/src/main/res/layout/trait_status.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/traitCircle"
+    android:id="@+id/traitStatus"
     android:layout_width="25dp"
     android:layout_height="25dp"/>
