--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -83,6 +83,17 @@
             android:selectAllOnFocus="true"
             android:summary="%s"
             android:title="@string/brapi_timeout" />
+
+        <ListPreference
+            android:defaultValue="value"
+            android:dialogTitle="@string/preferences_brapi_cache_invalidate_dialog_title"
+            android:entries="@array/pref_brapi_cache_invalidate_entries"
+            android:entryValues="@array/pref_brapi_cache_invalidate_values"
+            android:icon="@drawable/ic_tb_changelog"
+            android:key="BRAPI_CACHE_INVALIDATE_INTERVAL"
+            android:summary="@string/preferences_brapi_cache_invalidate_summary"
+            android:title="@string/preferences_brapi_cache_invalidate_title" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
