move chip to end of spinner item layout

--- a/app/src/main/res/layout/dialog_trait_duplicate_setup.xml
+++ b/app/src/main/res/layout/dialog_trait_duplicate_setup.xml
@@ -3,11 +3,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:gravity="center_horizontal">
 
     <Spinner
         android:id="@+id/duplicate_setup_spinner"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
