--- a/app/src/main/res/layout/list_item_study.xml
+++ b/app/src/main/res/layout/list_item_study.xml
@@ -32,6 +32,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/list_item_study_pb"
             app:layout_constraintVertical_bias="0"
             app:layout_constraintHorizontal_bias="0"
             tools:text="KSU" />
@@ -75,6 +76,7 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/list_item_study_traits_chip"
             app:layout_constraintTop_toBottomOf="@id/list_item_study_title_tv"
+            app:layout_constraintEnd_toStartOf="@id/list_item_study_pb"
             tools:text="Manhattan, KS" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
