updated filter/import/save button text color to dark, added extra color attribute high contrast case

--- a/app/src/main/res/layout/activity_list_filter.xml
+++ b/app/src/main/res/layout/activity_list_filter.xml
@@ -105,6 +105,9 @@
         android:minHeight="?attr/actionBarSize"
         android:text="@string/dialog_import"
         android:visibility="gone"
+        android:textColor="?attr/fb_color_text_high_contrast_inverted"
+        android:background="@drawable/cell"
+        android:backgroundTint="?attr/fb_color_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
