moved reset cache button to overflow menu updated string

--- a/app/src/main/res/menu/menu_filter_brapi.xml
+++ b/app/src/main/res/menu/menu_filter_brapi.xml
@@ -16,5 +16,5 @@
         android:id="@+id/action_reset_cache"
         android:title="@string/menu_filter_brapi_reset_cache_title"
         android:icon="@drawable/ic_field_sync"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 </menu>
